# obsidian-multivault-mcp

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  obsidian-multivault-mcp-config.example.yaml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
src/obsidian_multivault_mcp/: __init__.py  __main__.py  client.py  config.py  logging_config.py  server.py  validation_types.py
src/obsidian_multivault_mcp/tools/: __init__.py  _helpers.py  append_note.py  delete_note.py  list_directory.py  list_vaults.py  patch_note.py  read_note.py  search_all_vaults.py  search_vault.py  write_note.py
tests/: conftest.py  test_client.py  test_config.py  test_curators.py  test_logging_config.py  test_main.py  test_tools.py  test_validation_types.py
